updated framework with new classes for centering text, showing images, padding issues on text. Added new subpage template.

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 <nav>
 	<div class="container">
 		<ul id="main">
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="subpage.html">About</a></li>
 			<li><a href="#">Portfolio</a></li>
 			<li><a href="#">Contact</a></li>
 			
