Added a print stylesheet, and added a button implementation page.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
+
+
 <link rel="stylesheet" href="stylesheets/reset.css" />
 <link rel="stylesheet" href="stylesheets/framework.css" />
 
@@ -26,6 +28,10 @@
 <link rel="stylesheet" href="stylesheets/colors.css" />
 <link rel="stylesheet" href="stylesheets/buttons.css" />
 <link rel="stylesheet" href="stylesheets/custom.css" />
+
+
+
+<link rel="stylesheet" href="stylesheets/print.css" media="print" />
 
 <style type="text/css">
 	code { background:#000; display:block; padding:10px; }
@@ -51,6 +57,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="grid.html">Grid</a></li>
+        <li><a href="buttons.html">Buttons</a></li>
       </ul>
     </div>
   </nav>
@@ -108,10 +115,7 @@
       </div>
       <!-- end of grid 4x4x4 -->
       <div class="clear"></div>
-      <div class="grid-6">
-        <h2>Grid 6</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultricies adipiscing felis vitae consequat. Aliquam congue, metus non hendrerit tempor, erat augue tempus nisi, eget aliquet enim urna et lorem. Vestibulum laoreet neque vitae sem mollis quis cursus nisl iaculis. Quisque orci nisi, auctor ac accumsan at, aliquam id neque. Suspendisse ac odio risus, sit amet pharetra massa. Suspendisse ipsum velit, semper quis aliquet sollicitudin, pharetra sit amet tellus. Morbi in erat ac felis luctus cursus at ac nibh. Ut vel est id mi ultricies vehicula et eu diam. Mauris placerat, metus sit amet placerat iaculis, arcu eros commodo risus, non consequat diam nunc sed magna. Proin sed tellus nisl, in condimentum nibh.</p>
-      </div>
+      
       <div class="grid-6">
         <h2>Code</h2>
         <p><code>
@@ -128,6 +132,10 @@
             &lt;/div&gt;
             
             </code></p>
+      </div>
+      <div class="grid-6">
+        <h2>Grid 6</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultricies adipiscing felis vitae consequat. Aliquam congue, metus non hendrerit tempor, erat augue tempus nisi, eget aliquet enim urna et lorem. Vestibulum laoreet neque vitae sem mollis quis cursus nisl iaculis. Quisque orci nisi, auctor ac accumsan at, aliquam id neque. Suspendisse ac odio risus, sit amet pharetra massa. Suspendisse ipsum velit, semper quis aliquet sollicitudin, pharetra sit amet tellus. Morbi in erat ac felis luctus cursus at ac nibh. Ut vel est id mi ultricies vehicula et eu diam. Mauris placerat, metus sit amet placerat iaculis, arcu eros commodo risus, non consequat diam nunc sed magna. Proin sed tellus nisl, in condimentum nibh.</p>
       </div>
       <!-- end of grid 6x6 -->
       <div class="clear"></div>
