--- a/grid.html
+++ b/grid.html
@@ -95,6 +95,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="grid.html">Grid</a></li>
+        <li><a href="buttons.html">Buttons</a></li>
       </ul>
     </div>
   </nav>
