--- a/grid.html
+++ b/grid.html
@@ -6,10 +6,6 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
 <link rel="shortcut icon" href="images/favicon.jpg" />
@@ -17,16 +13,38 @@
 <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
 <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
 
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
 <link rel="stylesheet" href="stylesheets/reset.css" />
-<link rel="stylesheet" href="stylesheets/framework.css" />
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
-<link rel="stylesheet" href="stylesheets/text.css" />
-<link rel="stylesheet" href="stylesheets/colors.css" />
-<link rel="stylesheet" href="stylesheets/buttons.css" />
-<link rel="stylesheet" href="stylesheets/custom.css" />
+<!-- Centurion Framework Stylesheets -->
+<link rel="stylesheet" href="stylesheets/options/text.css" />
+<link rel="stylesheet" href="stylesheets/options/colors.css" />
+<link rel="stylesheet" href="stylesheets/options/buttons.css" />
+<link rel="stylesheet" href="stylesheets/options/various.css" /> 
+<link rel="stylesheet" href="stylesheets/framework/cframework.css" /> 
+<link rel="stylesheet" href="stylesheets/custom.css" /> 
+<!-- End of Centurion Framework Stylesheets -->
 
+<link rel="stylesheet" href="demo.css" />
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="scripts/centurion.js"></script>
+
+<!-- fix for IE 6-8 -->
+<script src="scripts/css3-mediaqueries.js"></script>
+<!-- end of fix for IE 6-8 -->
+
+<!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+<!--[if gte IE 9]>
+  <style type="text/css">
+    .gradient {
+       filter: none;
+    }
+  </style>
+<![endif]-->
 
 <style type="text/css">
 		.imgCenter, .center {
@@ -64,11 +82,11 @@
 			padding: 10px;
 		}
 		
-		section .grid-12 p.noStyle { 
+		section p.noStyle { 
 			border: none;
 			background: none;
 			border: none;
-			color: #FFF;
+			color: #333;
 			font-size: 16px;
 			padding: 0;
 		}
@@ -77,29 +95,32 @@
 
 </head>
 <body>
+<!-- Navigation -->
+  <nav id="main">
+    <div class="container">
+      <div class="grid-12">
+          <h1>Centurion Framework</h1>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="grid.html">Grid</a></li>
+            <li><a href="various.html">Features</a></li>
+          </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- End of Navigation --> 
+
 <div id="wrapper"> 
   <!-- Header -->
   <header>
     <div class="container">
       <div class="grid-12">
-        <h1><big>Centurion Framework</big></h1>
+        <h1><big>Grid Layout</big></h1>
       </div>
     </div>
   </header>
-  <!-- End of Header --> 
-  
-  <!-- Navigation -->
-  <nav>
-    <div class="container">
-      <ul id="main">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="grid.html">Grid</a></li>
-        <li><a href="buttons.html">Buttons</a></li>
-      </ul>
-    </div>
-  </nav>
-  <!-- End of Navigation --> 
+  <!-- End of Header -->
   
   <!-- Content Section -->
   <section>
@@ -227,13 +248,196 @@
         	<p>Grid 12</p>
         </div>
         <!-- 12 -->
+        <div class="clear"></div>
+
+
+        <!-- PUSH GRIDS -->
+        <div class="grid-12">
+            <h2>Push the Grid</h2>
+        </div>
+
+        <div class="grid-1">
+            <p>Grid 1</p>
+        </div>
+        <div class="grid-1">
+            <p>Grid 1</p>
+        </div>
+
+        <div class="grid-1">
+            <p>Grid 1</p>
+        </div>
+
+        <div class="grid-1">
+            <p>Grid 1</p>
+        </div>
+
+        <div class="grid-1">
+            <p>Grid 1</p>
+        </div>
+        <div class="grid-1">
+            <p>Grid 1</p>
+        </div>
+        <div class="grid-1">
+            <p>Grid 1</p>
+        </div>
+        <div class="grid-1">
+            <p>Grid 1</p>
+        </div>
+        <div class="grid-1">
+            <p>Grid 1</p>
+        </div>
+        <div class="grid-1">
+            <p>Grid 1</p>
+        </div>
+        <div class="grid-1">
+            <p>Grid 1</p>
+        </div>
+        <div class="grid-1">
+            <p>Grid 1</p>
+        </div>
+
+        <!-- 4 x 8 -->
+        <div class="clear"></div>
+
+  <!--       <div class="grid-4 push-1">
+            <p>Grid 4</p>
+        </div>
+        <div class="clear"></div>
+        <div class="grid-4 push-2">
+            <p>Grid 4</p>
+        </div>
+        <div class="clear"></div>
+        <div class="grid-4 push-3">
+            <p>Grid 4</p>
+        </div>
+        <div class="clear"></div>
+        <div class="grid-4 push-4">
+            <p>Grid 4</p>
+        </div>
+        <div class="clear"></div>
+        <div class="grid-4 push-5">
+            <p>Grid 4</p>
+        </div>
+        <div class="clear"></div> -->
+        <!-- <div class="grid-4 push-6">
+            <p>Grid 4</p>
+        </div>
+        <div class="clear"></div>
+        <div class="grid-4 push-7">
+            <p>Grid 4</p>
+        </div>
+        <div class="clear"></div>
+        <div class="grid-4 push-8">
+            <p>Grid 4</p>
+        </div>
+        <div class="clear"></div> -->
+
+
+        <!-- <div class="grid-11 push-1">
+            <p>First</p>
+        </div>
+        <div class="grid-1 pull-11">
+            <p>Last</p>
+        </div>
+        <div class="clear"></div> -->
+
+
+        <div class="grid-10 push-2">
+            <p>First - Grid 10</p>
+        </div>
+        <div class="grid-2 pull-10">
+            <p>Last - Grid 2</p>
+        </div>
+        <div class="clear"></div>
+
+
+        <div class="grid-9 push-3">
+            <p>First - Grid 9</p>
+        </div>
+        <div class="grid-3 pull-9">
+            <p>Last - Grid 3</p>
+        </div>
+        <div class="clear"></div>
+
+
+        <!-- MAKE A CENTERED ELEMENT -->
+        <div class="grid-12">
+            <h2>Make a Pyramid</h2>
+        </div>
+        <div class="clear"></div>
+
+
+        <div class="grid-1 centerGrid">
+            <p>Grid 1</p>
+        </div>
+        <div class="clear"></div>
         
+        <div class="grid-2 centerGrid">
+            <p>Grid 2</p>
+        </div>
+        <div class="clear"></div>
+
+        <div class="grid-3 centerGrid">
+            <p>Grid 3</p>
+        </div>
+        <div class="clear"></div>
+
+        <div class="grid-4 centerGrid">
+            <p>Grid 4</p>
+        </div>
+        <div class="clear"></div>
+
+        <div class="grid-5 centerGrid">
+            <p>Grid 5</p>
+        </div>
+        <div class="clear"></div>
+
+        <div class="grid-6 centerGrid">
+            <p>Grid 6</p>
+        </div>
+        <div class="clear"></div>
+
+        <div class="grid-7 centerGrid">
+            <p>Grid 7</p>
+        </div>
+        <div class="clear"></div>
+
+        <div class="grid-8 centerGrid">
+            <p>Grid 8</p>
+        </div>
+        <div class="clear"></div>
+        
+        <div class="grid-9 centerGrid">
+            <p>Grid 9</p>
+        </div>
+        <div class="clear"></div>
+
+        <div class="grid-10 centerGrid">
+            <p>Grid 10</p>
+        </div>
+        <div class="clear"></div>
+
+        <div class="grid-11 centerGrid">
+            <p>Grid 11</p>
+        </div>
+        <div class="clear"></div>
+
+        <div class="grid-12 centerGrid">
+            <p>Grid 12</p>
+        </div>
+        <div class="clear"></div>
+
     </div>
     <!-- container -->
     <div class="clear"></div>
   </section>
   <!-- End of Content Section --> 
   
+
+  
+</div>
+<!-- End of Wrapper -->
+
   <!-- Footer -->
   <footer>
     <div class="container">
@@ -243,9 +447,6 @@
     </div>
   </footer>
   <!-- End of Footer -->  
-  
-</div>
-<!-- End of Wrapper -->
 
 </body>
 </html>
