--- a/various.html
+++ b/various.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Centurion Framework | About</title>
+<title>Centurion Framework | Various Styles</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -47,7 +47,7 @@
 <![endif]-->
 </head>
 <body>
-<!-- Navigation -->
+ <!-- Navigation -->
   <nav id="main">
     <div class="container">
       <div class="grid-12">
@@ -68,7 +68,7 @@
   <header>
     <div class="container">
       <div class="grid-12">
-        <h1><big>About</big></h1>
+        <h1><big>Various Enhancements</big></h1>
       </div>
     </div>
   </header>
@@ -78,7 +78,35 @@
   <section>
     <div class="container">
       <div class="grid-8">
-        <h1>About this Template</h1>
+        <h2>Subpage</h2>
+
+        <h3>Navigation</h3>
+        <nav>
+          <ul>
+            <li><a href="#">Test</a></li>
+            <li><a href="#">Test</a></li>
+            <li><a href="#">Test</a></li>
+            <li><a href="#">Test</a></li>
+          </ul>
+        </nav>
+        <div class="clear"></div>
+
+
+        <h3>Breadcrumbs</h3>
+        <ul class="ctCrumbs">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Gene Splicing</a></li>
+          <li class="current"><a href="#">Home</a></li>
+        </ul>
+
+        <h3>Panels</h3>
+        <div class="ctPanel">
+          <h3>My panel is bigger than yours.</h3>
+          <p>Seriously, just look at this sweet panel.</p>
+        </div>
+
+
         <p>More information will be coming soon once I have finalized most of the template and the various portions of the template. For now it includes the basic framework, which can be shrinked using modern CSS3 media queries, 6 types of buttons in 3 different sizes, headings that respond to the size to the viewable screen size. Stay tuned for more features added daily.</p>
         <h2>Some Lorem Ipsum Text</h2>
         <p>Duis magna leo, dapibus id adipiscing id, egestas sed dui. Proin venenatis dui eu augue sagittis vitae suscipit diam sagittis. Suspendisse malesuada elementum enim, dictum congue purus varius nec. Suspendisse et neque nunc. Morbi porttitor risus eu tortor interdum id porttitor justo aliquet. Nam tincidunt felis ac purus varius tincidunt. Quisque luctus faucibus dolor, sit amet condimentum augue egestas quis. Nam rutrum, ante quis commodo tincidunt, orci ante ultrices quam, eu ullamcorper purus eros id magna. Nulla ac neque ac mi interdum ultricies. Nullam sagittis est in mauris adipiscing posuere. Aenean volutpat sapien sit amet sapien malesuada quis posuere massa pretium. Sed hendrerit egestas fermentum. Ut fringilla sodales neque, sit amet euismod diam pulvinar sit amet. Nulla vestibulum commodo tempus.</p>
@@ -86,6 +114,14 @@
       </div>
       <!-- end of grid 8 -->
       <div class="grid-4">
+      	<h2>Features</h2>
+		<ul>
+			<li><a href="tables.html">Tables</a></li>
+			<li><a href="buttons.html">Buttons</a></li>
+			<!--<li><a href="various.html">Various</a></li> -->
+		</ul>
+            
+      
         <h2>Sidebar</h2>
         <img src="http://lorempixel.com/280/200/" class="frame" alt="image with caption" />
         <p class="caption">Captions to describe your images.</p>
@@ -111,6 +147,6 @@
     </div>
   </footer>
   <!-- End of Footer --> 
-  
+
 </body>
 </html>
