updated text on page.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Centurion</h1>
-        <p>Centurion is a CSS 3 media query based framework</p>
+        <p>Centurion is a HTML5 /CSS3 based framework.</p>
         <p class="view"><a href="https://github.com/jhough10/Centurion">View the Project on GitHub <small>jhough10/Centurion</small></a></p>
         <ul>
           <li><a href="https://github.com/jhough10/Centurion/zipball/master">Download <strong>ZIP File</strong></a></li>
@@ -25,11 +25,16 @@
         </ul>
       </header>
       <section>
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>The Next Framework</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        <p>Centurion is being worked on as we speak, but this page is in desperate need of updating</p>
 
-<pre><code>$ cd your_repo_root/repo_name
+
+        <!-- <h3>Welcome to GitHub Pages.</h3> -->
+
+<!-- <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p> -->
+
+<!-- <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
@@ -47,10 +52,10 @@ $ git checkout gh-pages
 <h3>Authors and Contributors</h3>
 
 <p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+ -->
+<!-- <h3>Support or Contact</h3>
 
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p> -->
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/jhough10">jhough10</a></p>
