switched stylesheets to SCSS versions

--- a/index.html
+++ b/index.html
@@ -22,18 +22,19 @@
 <link rel="stylesheet" href="stylesheets/options/colors.css" />
 <link rel="stylesheet" href="stylesheets/options/buttons.css" />
 <link rel="stylesheet" href="stylesheets/options/various.css" /> 
+<link rel="stylesheet" href="stylesheets/framework/fixed.css" />
 <link rel="stylesheet" href="stylesheets/framework/cframework.css" /> 
-<link rel="stylesheet" href="stylesheets/custom.css" /> 
 <!-- End of Centurion Framework Stylesheets -->
+
+<link rel="stylesheet" href="stylesheets/custom.css" /> 
+
 
 <link rel="stylesheet" href="demo.css" />
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="scripts/jquery.url.js"></script>
 <script type="text/javascript" src="scripts/centurion.js"></script>
 
-<!-- fix for IE 6-8 -->
-<script src="scripts/css3-mediaqueries.js"></script>
-<!-- end of fix for IE 6-8 -->
 
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -81,7 +82,7 @@
       <div class="grid-8">
         <h1>The Centurion Framework</h1>
         <h2>Do I stretch to new constraints?</h2>
-        <img src="http://lorempixel.com/200/320/" alt="" class="lfloat frame visible">
+        <img src="http://placehold.it/200x320" alt="" class="lfloat frame visible">
         <p>Centurion is a resposive, media query driven HTML5 and CSS3 framework. It is designed to be used on any website out of the box. Unlilke some other frameworks, Centurion is designed for mobile devices and desktop. Using CSS media queries the Centurion is able to conform to the screen and shift the content as necessary so that the content is not obscured.</p>
         <p>Centurion offers the basic 960 grid with a twist. Using a 12 column container, the framework can size down from 960 to 768, 480, and 320 pixel screen sizes. Centurion does all its work in the browser, and allows for one template to auto-resize to the device without the need to detect devices through either JavaScript or PHP.</p>
       </div>
