Updated Centurion to work with 3 less CSS files and added adapt.js for stylesheet swtiching

--- a/about.html
+++ b/about.html
@@ -13,28 +13,22 @@
 <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
 <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
 
-
 <link rel="stylesheet" href="stylesheets/reset.css" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
 <!-- Centurion Framework Stylesheets -->
-<link rel="stylesheet" href="stylesheets/options/text.css" />
-<link rel="stylesheet" href="stylesheets/options/colors.css" />
-<link rel="stylesheet" href="stylesheets/options/buttons.css" />
-<link rel="stylesheet" href="stylesheets/options/various.css" /> 
+<link rel="stylesheet" href="stylesheets/options/typography.css" />
+<link rel="stylesheet" href="stylesheets/options/features.css" /> 
 <link rel="stylesheet" href="stylesheets/framework/cframework.css" /> 
-<link rel="stylesheet" href="stylesheets/custom.css" /> 
 <!-- End of Centurion Framework Stylesheets -->
 
+<link rel="stylesheet" href="stylesheets/custom.css" /> 
 <link rel="stylesheet" href="demo.css" />
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="scripts/jquery.url.js"></script>
 <script type="text/javascript" src="scripts/centurion.js"></script>
-
-<!-- fix for IE 6-8 -->
-<script src="scripts/css3-mediaqueries.js"></script>
-<!-- end of fix for IE 6-8 -->
-
+<script type="text/javascript" src="scripts/adapt.min.js"></script>
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
@@ -87,7 +81,7 @@
       <!-- end of grid 8 -->
       <div class="grid-4">
         <h2>Sidebar</h2>
-        <img src="http://lorempixel.com/280/200/" class="frame" alt="image with caption" />
+        <img src="http://placehold.it/280x200" class="frame" alt="image with caption" />
         <p class="caption">Captions to describe your images.</p>
         <h2>More lorem ipsum</h2>
         <p>Duis magna leo, dapibus id adipiscing id, egestas sed dui. Proin venenatis dui eu augue sagittis vitae suscipit diam sagittis. Suspendisse malesuada elementum enim, dictum congue purus varius nec. Suspendisse et neque nunc. Morbi porttitor risus eu tortor interdum id porttitor justo aliquet. Nam tincidunt felis ac purus varius tincidunt.</p>
@@ -106,7 +100,7 @@
   <footer>
     <div class="container">
       <div class="grid-12">
-        <p>Centurion Framework was created by Justin Hough. Images supplied by <a href="http://lorempixel.com/">lorempixel</a></p>
+        <p>Centurion Framework was created by Justin Hough. Images supplied by <a href="http://placehold.it/">placehold.it</a></p>
       </div>
     </div>
   </footer>
