--- a/tables.html
+++ b/tables.html
@@ -10,33 +10,23 @@
 <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
 <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
 <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
+
 <link rel="stylesheet" href="stylesheets/reset.css" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
 <!-- Centurion Framework Stylesheets -->
-<link rel="stylesheet" href="stylesheets/options/text.css" />
-<link rel="stylesheet" href="stylesheets/options/colors.css" />
-<link rel="stylesheet" href="stylesheets/options/buttons.css" />
-<link rel="stylesheet" href="stylesheets/options/various.css" />
-<link rel="stylesheet" href="stylesheets/framework/cframework.css" />
-<link rel="stylesheet" href="stylesheets/custom.css" />
+<link rel="stylesheet" href="stylesheets/options/typography.css" />
+<link rel="stylesheet" href="stylesheets/options/features.css" /> 
+<link rel="stylesheet" href="stylesheets/framework/cframework.css" /> 
 <!-- End of Centurion Framework Stylesheets -->
 
+<link rel="stylesheet" href="stylesheets/custom.css" /> 
 <link rel="stylesheet" href="demo.css" />
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="scripts/jquery.url.js"></script>
 <script type="text/javascript" src="scripts/centurion.js"></script>
-
-<!-- fix for IE 6-8 -->
-<script src="scripts/css3-mediaqueries.js"></script>
-<!-- end of fix for IE 6-8 -->
-
-<style type="text/css">
-span.colorChange {
-  font-weight: bold;
-  color: #F00;
-}
-</style>
-
+<script type="text/javascript" src="scripts/adapt.min.js"></script>
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
@@ -47,6 +37,14 @@ span.colorChange {
     }
   </style>
 <![endif]-->
+
+<style type="text/css">
+span.colorChange {
+  font-weight: bold;
+  color: #F00;
+}
+</style>
+
 </head>
 <body>
 <!-- Navigation -->
@@ -302,7 +300,7 @@ span.colorChange {
         </table>
       </div>
       <div class="grid-4">
-        <h2>Features</h2>
+        <h2>Other Features</h2>
         <ul>
           <li><a href="tables.html">Tables</a></li>
           <li><a href="buttons.html">Buttons</a></li>
@@ -347,7 +345,7 @@ span.colorChange {
 <footer>
   <div class="container">
     <div class="grid-12">
-      <p>Centurion Framework was created by Justin Hough. Images supplied by <a href="http://lorempixel.com/">lorempixel</a></p>
+      <p>Centurion Framework was created by Justin Hough. Images supplied by <a href="http://placehold.it/">placehold.it</a></p>
     </div>
   </div>
 </footer>
