--- a/various.html
+++ b/various.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Centurion Framework | Various Styles</title>
+<title>Centurion Framework | Features</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -13,28 +13,22 @@
 <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
 <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
 
-
 <link rel="stylesheet" href="stylesheets/reset.css" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
 <!-- Centurion Framework Stylesheets -->
-<link rel="stylesheet" href="stylesheets/options/text.css" />
-<link rel="stylesheet" href="stylesheets/options/colors.css" />
-<link rel="stylesheet" href="stylesheets/options/buttons.css" />
-<link rel="stylesheet" href="stylesheets/options/various.css" /> 
+<link rel="stylesheet" href="stylesheets/options/typography.css" />
+<link rel="stylesheet" href="stylesheets/options/features.css" /> 
 <link rel="stylesheet" href="stylesheets/framework/cframework.css" /> 
-<link rel="stylesheet" href="stylesheets/custom.css" /> 
 <!-- End of Centurion Framework Stylesheets -->
 
+<link rel="stylesheet" href="stylesheets/custom.css" /> 
 <link rel="stylesheet" href="demo.css" />
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="scripts/jquery.url.js"></script>
 <script type="text/javascript" src="scripts/centurion.js"></script>
-
-<!-- fix for IE 6-8 -->
-<script src="scripts/css3-mediaqueries.js"></script>
-<!-- end of fix for IE 6-8 -->
-
+<script type="text/javascript" src="scripts/adapt.min.js"></script>
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
@@ -68,7 +62,7 @@
   <header>
     <div class="container">
       <div class="grid-12">
-        <h1><big>Various Enhancements</big></h1>
+        <h1><big>Features</big></h1>
       </div>
     </div>
   </header>
@@ -78,7 +72,6 @@
   <section>
     <div class="container">
       <div class="grid-8">
-        <h2>Subpage</h2>
 
         <h3>Navigation</h3>
         <nav>
@@ -114,7 +107,7 @@
       </div>
       <!-- end of grid 8 -->
       <div class="grid-4">
-      	<h2>Features</h2>
+      	<h2>Other Features</h2>
 		<ul>
 			<li><a href="tables.html">Tables</a></li>
 			<li><a href="buttons.html">Buttons</a></li>
@@ -123,7 +116,7 @@
             
       
         <h2>Sidebar</h2>
-        <img src="http://lorempixel.com/280/200/" class="frame" alt="image with caption" />
+        <img src="http://placehold.it/280x200" class="frame" alt="image with caption" />
         <p class="caption">Captions to describe your images.</p>
         <h2>More lorem ipsum</h2>
         <p>Duis magna leo, dapibus id adipiscing id, egestas sed dui. Proin venenatis dui eu augue sagittis vitae suscipit diam sagittis. Suspendisse malesuada elementum enim, dictum congue purus varius nec. Suspendisse et neque nunc. Morbi porttitor risus eu tortor interdum id porttitor justo aliquet. Nam tincidunt felis ac purus varius tincidunt.</p>
@@ -142,7 +135,7 @@
   <footer>
     <div class="container">
       <div class="grid-12">
-        <p>Centurion Framework was created by Justin Hough. Images supplied by <a href="http://lorempixel.com/">lorempixel</a></p>
+        <p>Centurion Framework was created by Justin Hough. Images supplied by <a href="http://placehold.it/">placehold.it</a></p>
       </div>
     </div>
   </footer>
