--- a/grid.html
+++ b/grid.html
@@ -13,28 +13,22 @@
 <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
 <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
 
-
 <link rel="stylesheet" href="stylesheets/reset.css" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
 <!-- Centurion Framework Stylesheets -->
-<link rel="stylesheet" href="stylesheets/options/text.css" />
-<link rel="stylesheet" href="stylesheets/options/colors.css" />
-<link rel="stylesheet" href="stylesheets/options/buttons.css" />
-<link rel="stylesheet" href="stylesheets/options/various.css" /> 
+<link rel="stylesheet" href="stylesheets/options/typography.css" />
+<link rel="stylesheet" href="stylesheets/options/features.css" /> 
 <link rel="stylesheet" href="stylesheets/framework/cframework.css" /> 
-<link rel="stylesheet" href="stylesheets/custom.css" /> 
 <!-- End of Centurion Framework Stylesheets -->
 
+<link rel="stylesheet" href="stylesheets/custom.css" /> 
 <link rel="stylesheet" href="demo.css" />
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="scripts/jquery.url.js"></script>
 <script type="text/javascript" src="scripts/centurion.js"></script>
-
-<!-- fix for IE 6-8 -->
-<script src="scripts/css3-mediaqueries.js"></script>
-<!-- end of fix for IE 6-8 -->
-
+<script type="text/javascript" src="scripts/adapt.min.js"></script>
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
@@ -47,14 +41,14 @@
 <![endif]-->
 
 <style type="text/css">
-		.imgCenter, .center {
+/*		.imgCenter, .center {
 			 display: block;
 			 margin-left: auto;
 			 margin-right: auto;
 		}
 		.fixed {
 			width:450px;
-		}
+		}*/
 		
 		code {
 			background:#ccc;
@@ -80,6 +74,7 @@
 			color: #333;
 			font-size: 12px;
 			padding: 10px;
+			margin-bottom: 10px;
 		}
 		
 		section p.noStyle { 
@@ -126,7 +121,6 @@
   <section>
     <div class="container">
       <div class="grid-12">
-        <h1>Grid</h1>
         <p class="noStyle">This is a page to show how the grid layout functions.</p>
       </div>
       <div class="clear"></div>
@@ -143,7 +137,7 @@
         <div class="grid-3">
         	<p>Grid 3</p>
         </div>
-    
+    	<div class="clear"></div>
     
     	<!-- Grid layout - 12 column -->
 		<div class="grid-1">
@@ -255,51 +249,13 @@
         <div class="grid-12">
             <h2>Push the Grid</h2>
         </div>
-
-        <div class="grid-1">
-            <p>Grid 1</p>
+		<div class="clear"></div>
+		
+		<div class="grid-4">
+            <p>Grid 4</p>
         </div>
-        <div class="grid-1">
-            <p>Grid 1</p>
-        </div>
-
-        <div class="grid-1">
-            <p>Grid 1</p>
-        </div>
-
-        <div class="grid-1">
-            <p>Grid 1</p>
-        </div>
-
-        <div class="grid-1">
-            <p>Grid 1</p>
-        </div>
-        <div class="grid-1">
-            <p>Grid 1</p>
-        </div>
-        <div class="grid-1">
-            <p>Grid 1</p>
-        </div>
-        <div class="grid-1">
-            <p>Grid 1</p>
-        </div>
-        <div class="grid-1">
-            <p>Grid 1</p>
-        </div>
-        <div class="grid-1">
-            <p>Grid 1</p>
-        </div>
-        <div class="grid-1">
-            <p>Grid 1</p>
-        </div>
-        <div class="grid-1">
-            <p>Grid 1</p>
-        </div>
-
-        <!-- 4 x 8 -->
         <div class="clear"></div>
-
-  <!--       <div class="grid-4 push-1">
+		<div class="grid-4 push-1">
             <p>Grid 4</p>
         </div>
         <div class="clear"></div>
@@ -318,8 +274,8 @@
         <div class="grid-4 push-5">
             <p>Grid 4</p>
         </div>
-        <div class="clear"></div> -->
-        <!-- <div class="grid-4 push-6">
+        <div class="clear"></div>
+        <div class="grid-4 push-6">
             <p>Grid 4</p>
         </div>
         <div class="clear"></div>
@@ -330,7 +286,7 @@
         <div class="grid-4 push-8">
             <p>Grid 4</p>
         </div>
-        <div class="clear"></div> -->
+        <div class="clear"></div>
 
 
         <!-- <div class="grid-11 push-1">
@@ -442,7 +398,7 @@
   <footer>
     <div class="container">
       <div class="grid-12">
-        <p>Centurion Framework was created by Justin Hough. Images supplied by <a href="http://lorempixel.com/">lorempixel</a></p>
+        <p>Centurion Framework was created by Justin Hough. Images supplied by <a href="http://placehold.it/">placehold.it</a></p>
       </div>
     </div>
   </footer>
