--- a/index.html
+++ b/index.html
@@ -13,29 +13,22 @@
 <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
 <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
 
-
 <link rel="stylesheet" href="stylesheets/reset.css" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
 <!-- Centurion Framework Stylesheets -->
-<link rel="stylesheet" href="stylesheets/options/text.css" />
-<link rel="stylesheet" href="stylesheets/options/colors.css" />
-<link rel="stylesheet" href="stylesheets/options/buttons.css" />
-<link rel="stylesheet" href="stylesheets/options/various.css" /> 
-<link rel="stylesheet" href="stylesheets/framework/fixed.css" />
+<link rel="stylesheet" href="stylesheets/options/typography.css" />
+<link rel="stylesheet" href="stylesheets/options/features.css" /> 
 <link rel="stylesheet" href="stylesheets/framework/cframework.css" /> 
 <!-- End of Centurion Framework Stylesheets -->
 
 <link rel="stylesheet" href="stylesheets/custom.css" /> 
-
-
 <link rel="stylesheet" href="demo.css" />
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript" src="scripts/jquery.url.js"></script>
 <script type="text/javascript" src="scripts/centurion.js"></script>
-
-
+<script type="text/javascript" src="scripts/adapt.min.js"></script>
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
@@ -184,7 +177,7 @@
   <footer>
     <div class="container">
       <div class="grid-12">
-        <p>Centurion Framework was created by Justin Hough. Images supplied by <a href="http://lorempixel.com/">lorempixel</a></p>
+        <p>Centurion Framework was created by Justin Hough. Images supplied by <a href="http://placehold.it/">placehold.it</a></p>
       </div>
     </div>
   </footer>
