Updated project pages
new design, no images. Fixed a few bugs in Centurion with class
conflicts and will upload to main branch later.

--- a/index.html
+++ b/index.html
@@ -1,88 +1,108 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Centurion by jhough10</title>
+<head>
+	<title>Centurion - A CSS Web Framework</title>
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+	
+	<link rel="shortcut icon" href="graphics/favicon.jpg" />
+	<link rel="apple-touch-icon" href="graphics/apple-touch-icon.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="graphics/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="graphics/apple-touch-icon-114x114.png" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Centurion</h1>
-        <p>Centurion is a HTML5 /CSS3 based framework.</p>
-        <p>Centurion is a HTML5 / CSS 3 based framework for rapid prototyping.</p>
-        <p class="view"><a href="https://github.com/jhough10/Centurion">View the Project on GitHub <small>jhough10/Centurion</small></a></p>
-        <ul>
-          <li><a href="https://github.com/jhough10/Centurion/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/jhough10/Centurion/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/jhough10/Centurion">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+	<!-- CENTURION -->
+	<link rel="stylesheet" href="styles/reset.css" />
+	<link rel="stylesheet" href="styles/print.css" />
+	<link rel="stylesheet" href="styles/centurion.css" />
+	<link rel="stylesheet" href="styles/style.css" />
+	<!-- end of CENTURION -->
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,700,600,800,300' rel='stylesheet' type='text/css'>
 
-        <h3>The Next Framework</h3>
+	<link rel="stylesheet" href="styles/demo.css" />
 
-        <p>Centurion is being worked on as we speak, but this page is in desperate need of updating</p>
+</head>
+<body>
+	<a href="https://github.com/jhough10/centurion"><img
+        src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" 
+        alt="Fork me on GitHub" class="github"></a>
 
+	<header>
+		<section class="container">
+			<article class="grid-2">
+				<h1><a href="index.html">Centurion</a></h1>
+			</article>
+			<article class="grid-10">
+				<nav>
+					<ul>
+						<li><a href="features.html">Features</a></li>
+						<li><a href="grid.html">The Grid</a></li>
+						<li><a href="options.html">Options</a></li>
+					</ul>
+				</nav>
+				
+			</article>
+		</section>
+	</header>
+	<section id="tour">
+		<div class="container">
+			<article class="grid-6">
+				<div class="slider">
+					<!-- SLIDER GOES HERE -->
+					<h1>Centurion</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent consequat magna mi, quis rhoncus mi. Aenean non mauris vitae arcu malesuada posuere at in sapien. Donec in tortor velit. Maecenas ac ultricies odio.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in tortor velit. Maecenas ac ultricies odio.</p>
 
-        <!-- <h3>Welcome to GitHub Pages.</h3> -->
+					<p id="download">
+						<a href="https://github.com/jhough10/Centurion/archive/master.zip" class="button large green">Download Centurion</a>
+					</p>
 
-<!-- <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p> -->
+				</div>
+			</article>
+			<article class="grid-6">
+				<img src="http://placehold.it/460x350" alt="picture of mobile devices" />
+			</article>
+		</div>
+	</section>
+	<section id="primary">
+		<div class="container">
+			<article class="grid-4">
+				<h2 id="css3">CSS3/HTML 5</h2>
+				<p>Ut leo quam, vulputate id vehicula in, accumsan at quam. Sed quis augue non nibh tincidunt luctus.<p>
+			</article>
 
-<!-- <pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+			<article class="grid-4">
+				<h2 id="responsive">Responsive</h2>
+				<p>Pellentesque pulvinar lacinia dolor, varius pulvinar ligula aliquet nec. Praesent ut nunc vitae purus vestibulum molestie.<p>
+			</article>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+			<article class="grid-4">
+				<h2 id="what-else">Prototype Quick</h2>
+				<p>Cras sit amet purus purus, suscipit dapibus ante. Mauris luctus dolor eget arcu viverra eu varius magna placerat.<p>
+			</article>
 
-<h3>Designer Templates</h3>
+			<p>&nbsp;</p>
+			<div class="clear"></div>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+			<article class="cPanel">
+				<h2>Use Centurion for your next web project</h2>
+				<p>Ut leo quam, vulputate id vehicula in, accumsan at quam. Sed quis augue non nibh tincidunt luctus. Pellentesque pulvinar lacinia dolor, varius pulvinar ligula aliquet nec. Praesent ut nunc vitae purus vestibulum molestie. Cras sit amet purus purus, suscipit dapibus ante. Mauris luctus dolor eget arcu viverra eu varius magna placerat. Integer eu tortor vitae augue consequat pretium tempor id eros. Nullam placerat tincidunt imperdiet.<p>
+			</article>
 
-<h3>Rather Drive Stick?</h3>
+		</div>
+	</section>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<!-- 	 <section id="secondary">
+		<div class="container">
+			
+		</div>
+	</section>  -->
 
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
- -->
-<!-- <h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p> -->
-        <p>Centurion is a HTML5 / CSS 3 based framework for rapid prototyping. It comes out of the box, or the Git with pre-built features that help you build sites faster for Desktop and Mobile.</p>
-
-<p>The grid adjusts to the screen proportions that are given by the browser, and that is all there is to it.</p>
-
-<h3>FEATURES</h3>
-
-<ul>
-<li>Custom CSS buttons, no images required.</li>
-<li>Grid dimensions from 960 px down to 320 px wide.</li>
-<li>Image scaling.</li>
-<li>Heading scales based on size of browser. (Use em, instead of px)</li>
-<li>Navigation for Desktop and Mobile</li>
-<li>HTML 5 framework with backwards compatibility to IE6</li>
-</ul><p>And more...</p>
-
-<p>Licensed under GPL.
-GPL license:
-<a href="http://www.gnu.org/licenses/gpl.html">http://www.gnu.org/licenses/gpl.html</a></p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/jhough10">jhough10</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+	<footer>
+		<section class="container">
+			<article class="grid-12">
+				<p>Copyright &copy; 2012 Justin Hough</p>
+			</article>
+		</section>
+	</footer>
+</body>
 </html>
