updated centurion graphics and content
updated centurion home page and added documentation coming soon page.

--- a/documentation.html
+++ b/documentation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Features | Centurion - A CSS Web Framework</title>
+	<title>Documentation | Centurion - A CSS Web Framework</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	
@@ -43,11 +43,11 @@
 			</article>
 		</section>
 	</header>
-
+	
 	<section id="headline">
 		<div class="container">
 			<article class="grid-12">
-				<h1>Features</h1>
+				<h1>Documentation</h1>
 			</article>
 		</div>
 	</section>
@@ -57,44 +57,12 @@
 			<article class="grid-8">
 				
 
-		        <h3>Navigation</h3>
-		        <nav>
-		          <ul>
-		            <li><a href="#">Test</a></li>
-		            <li><a href="#">Test</a></li>
-		            <li><a href="#">Test</a></li>
-		            <li><a href="#">Test</a></li>
-		          </ul>
-		        </nav>
-		        <div class="clear"></div>
-
-
-		        <h3>Breadcrumbs</h3>
-		        <ul class="cCrumbs">
-		          <li><a href="#">Home</a></li>
-		          <li><a href="#">Features</a></li>
-		          <li><a href="#">Gene Splicing</a></li>
-		          <li class="current"><a href="#">Home</a></li>
-		        </ul>
-
-		        <h3>Panels</h3>
-		        <div class="cPanel">
-		          <h3>My panel is bigger than yours.</h3>
-		          <p>Seriously, just look at this sweet panel.</p>
-		        </div>
-
-		        <p>More information will be coming soon once I have finalized most of the template and the various portions of the template. For now it includes the basic framework, which can be shrinked using modern CSS3 media queries, 6 types of buttons in 3 different sizes, headings that respond to the size to the viewable screen size. Stay tuned for more features added daily.</p>
-		        
+		        <p>Documentation coming soon.</p>
 
 				<!-- end of content -->
 			</article>
 			<aside class="grid-4">
-				<h2>Features</h2>
-				<ul>
-					<li><a href="tables.html">Tables</a></li>
-					<li><a href="buttons.html">Buttons</a></li>
-					<!--<li><a href="various.html">Various</a></li> -->
-				</ul>
+
 			</aside>
 		</div>
 	</section>
