--- a/grid.html
+++ b/grid.html
@@ -91,18 +91,28 @@
 					<ul>
 						<li><a href="features.html">Features</a></li>
 						<li><a href="grid.html">The Grid</a></li>
+						<li><a href="documentation.html">Docs</a></li>
 					</ul>
 				</nav>
 				
 			</article>
 		</section>
 	</header>
+
+	<section id="headline">
+		<div class="container">
+			<article class="grid-12">
+				<h1>The Grid</h1>
+			</article>
+		</div>
+	</section>
+
 	<section id="grid">
 		<div class="container">
 			<article>
 		
 			<div class="grid-12">
-				<h1>The Grid</h1>
+				
 				<p class="noStyle">This is a page to show how the grid layout functions.</p>
 		    </div>
 			<div class="clear"></div>
@@ -429,7 +439,7 @@
 	<footer>
 		<section class="container">
 			<article class="grid-12">
-				<p>Copyright &copy; 2012 Justin Hough</p>
+				<p>Site content &copy; 2012 Room 316 Studios.</p>
 			</article>
 		</section>
 	</footer>
