added graphics to main page

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			</article>
 
 			<article class="grid-4">
-				<h2 id="what-else">Prototype Quick</h2>
+				<h2 id="prototype">Prototype Quick</h2>
 				<p>Need to built a web wireframe quick, look no further than Centurion. Scalable and easy to learn syntax makes building a prototype simple.</p>
 			</article>
 
