--- a/documentation.html
+++ b/documentation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Documentation | Centurion - A CSS Web Framework</title>
+	<title>Docs | Centurion - A CSS Web Framework</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	
@@ -47,7 +47,7 @@
 	<section id="headline">
 		<div class="container">
 			<article class="grid-12">
-				<h1>Documentation</h1>
+				<h1>Docs</h1>
 			</article>
 		</div>
 	</section>
