fixed features images

--- a/features.html
+++ b/features.html
@@ -20,6 +20,11 @@
 
 	<link rel="stylesheet" href="styles/demo.css" />
 
+
+	<style type="text/css">
+		img { width: auto; }
+	</style>
+
 </head>
 <body>
 	<a href="https://github.com/jhough10/centurion"><img
@@ -64,7 +69,7 @@
 						<p>Centurion is built with fewer files and packaged to be all inclusive.</p>
 					</article>
 		    	<article class="grid-3 omega">
-						<img src="graphics/briefcase.jpg" alt="feature" />
+						<img src="graphics/briefcase.jpg" class="hide-mobile" alt="feature" />
 					</article>
 				</section>
 				<div class="clear"></div>
@@ -72,7 +77,7 @@
 		    <!-- FEATURE 2 -->
 		    <section>
 		    	<article class="grid-3 alpha">
-						<img src="graphics/code.jpg" alt="feature" />
+						<img src="graphics/code.jpg" class="hide-mobile" alt="feature" />
 					</article>
 					<article class="grid-5 omega">
 						<h2>Semantic</h2>
@@ -89,7 +94,7 @@
 						<p>Classes and ID's make sense. Finding it hard to learn a new framework. Centurion features easy to read markup, stylying elements makes sense based on what the usage is and it even comes fully documented (coming soon) so you can find what you need fast.</p>
 					</article>
 		    	<article class="grid-3 omega">
-						<img src="graphics/book.jpg" alt="feature" />
+						<img src="graphics/book.jpg" class="hide-mobile" alt="feature" />
 					</article>
 				</section>
 				<div class="clear"></div>
@@ -97,7 +102,7 @@
 		    <!-- FEATURE 4 -->
 		    <section>
 		    	<article class="grid-3 alpha">
-						<img src="graphics/guage.jpg" alt="feature" />
+						<img src="graphics/guage.jpg" class="hide-mobile" alt="feature" />
 					</article>
 					<article class="grid-5 omega">
 						<h2>Optimized</h2>
@@ -115,7 +120,7 @@
 					</article>
 
 		    	<article class="grid-3 omega">
-						<img src="graphics/rocket.jpg" alt="feature" />
+						<img src="graphics/rocket.jpg" class="hide-mobile" alt="feature" />
 					</article>
 				</section>
 				<div class="clear"></div>
@@ -123,7 +128,7 @@
 		    <!-- FEATURE 6 -->
 		    <section>
 		    	<article class="grid-3 alpha">
-						<img src="graphics/tools.jpg" alt="feature" />
+						<img src="graphics/tools.jpg" class="hide-mobile" alt="feature" />
 					</article>
 					<article class="grid-5 omega">
 						<h2>Customizable</h2>
@@ -140,7 +145,7 @@
 					</article>
 
 		    	<article class="grid-3 omega">
-						<img src="graphics/grad_cap.jpg" alt="feature" />
+						<img src="graphics/grad_cap.jpg" class="hide-mobile" alt="feature" />
 					</article>
 				</section>
 				<div class="clear"></div>
@@ -148,7 +153,7 @@
 		    <!-- FEATURE 8 -->
 		    <!-- <section>
 		    	<article class="grid-3 alpha">
-						<img src="graphics/______.jpg" alt="feature" />
+						<img src="graphics/______.jpg" class="hide-mobile" alt="feature" />
 					</article>
 					<article class="grid-5 omega">
 						<h2>This is a feature</h2>
