--- a/features.html
+++ b/features.html
@@ -59,7 +59,7 @@
 
 	<section id="features">
 		<div class="container">
-			<article class="grid-8">
+			<article>
 				
 
 		       <!-- FEATURE 1 -->
