doc update and added tables/buttons page for usage.

--- a/documentation.html
+++ b/documentation.html
@@ -55,14 +55,20 @@
 	<section id="features">
 		<div class="container">
 			<article class="grid-8">
-				
+					<h2>Working Hard on an Update</h2>
 
-		        <p>Documentation coming soon.</p>
+		      <p>The team is working hard to update the documentation to make it available for use and in order to help all our users understand how to build awesome websites with Centurion.</p>
+		      <p>In the meantime, download Centurion play around with it and let us know if there are any features or bugs that you notice in the code. We are always streamlining it for optimal efficiency and usage in the community. The best part about Centurion is that we use it to and find new ways to get the code up to speed.</p>
 
 				<!-- end of content -->
 			</article>
 			<aside class="grid-4">
-
+				<h2>Areas of Interest</h2>
+				<ul>
+					<li><a href="tables.html">Tables</a></li>
+					<li><a href="buttons.html">Buttons</a></li>
+					<!--<li><a href="various.html">Various</a></li> -->
+				</ul>
 			</aside>
 		</div>
 	</section>
