--- a/features.html
+++ b/features.html
@@ -169,8 +169,8 @@
 				<ul>
 					<li><a href="tables.html">Tables</a></li>
 					<li><a href="buttons.html">Buttons</a></li> -->
-					<!--<li><a href="various.html">Various</a></li> -->
-				</ul>
+					<!--<li><a href="various.html">Various</a></li> 
+				</ul>-->
 			</aside>
 		</div>
 	</section>
