--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- Centurion Framework -->
 <link rel="stylesheet" href="/css/centurion.css" />
 <!-- End of Framework -->
-<link rel="stylesheet" href="/css/custom.css" /> 
+<link rel="stylesheet" href="/css/custom.css" />
 
 <!--[if gte IE 9]>
   <style type="text/css">
@@ -39,7 +39,7 @@
 <body>
  <!-- Navigation -->
 <header>
-  
+
     <div class="container">
       <div class="grid-12">
           <h1>Centurion Framework</h1>
@@ -54,13 +54,13 @@
   </ul>
 </nav>
 
-          
+
       </div>
     </div>
-  
+
 </header>
-<!-- End of Navigation --> 
-  
+<!-- End of Navigation -->
+
   <!-- Content Section -->
   <section>
     <div class="container">
@@ -104,7 +104,7 @@
   <p><a href="">Drupal Theme</a></p>
   <p>Wordpress Theme - coming soon.</p>
 
-</div> 
+</div>
 <!-- end of grid 8x3 -->
 
 <div class="clear"></div>
@@ -123,7 +123,7 @@
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
       &nbsp;&nbsp;&nbsp;&lt;/div&gt;<br>
       &lt;/div&gt;
-      
+
       </code></p>
 </div>
 <div class="grid-6">
@@ -154,23 +154,23 @@
     <!-- container -->
     <div class="clear"></div>
   </section>
-  <!-- End of Content Section --> 
+  <!-- End of Content Section -->
 </div>
-<!-- End of Wrapper -->  
-
-
+<!-- End of Wrapper -->
 
   <!-- Footer -->
   <footer>
     <div class="container">
-      <div class="grid-12">
+      <div class="grid-4 push-4">
         <p>Centurion Framework was created by <a href="http://www.justinhough.com" title="Justin Hough">Justin Hough</a>. Images supplied by <a href="http://placehold.it/">placehold.it</a></p>
+      </div>
+      <div class="grid-4">
+      	<p>Licensed under <a href="http://www.gnu.org/licenses/gpl.html" rel="license">GPL</a> and <a href="http://www.opensource.org/licenses/mit-license.php" rel="license">MIT</a>.</p>
       </div>
     </div>
   </footer>
-  <!-- End of Footer --> 
- 
+  <!-- End of Footer -->
+
 
 </body>
 </html>
-
