--- a/various/index.html
+++ b/various/index.html
@@ -19,7 +19,7 @@
 <!-- Centurion Framework -->
 <link rel="stylesheet" href="/css/centurion.css" />
 <!-- End of Framework -->
-<link rel="stylesheet" href="/css/custom.css" /> 
+<link rel="stylesheet" href="/css/custom.css" />
 
 <!--[if gte IE 9]>
   <style type="text/css">
@@ -39,7 +39,7 @@
 <body>
  <!-- Navigation -->
 <header>
-  
+
     <div class="container">
       <div class="grid-12">
           <h1>Centurion Framework</h1>
@@ -54,13 +54,13 @@
   </ul>
 </nav>
 
-          
+
       </div>
     </div>
-  
+
 </header>
-<!-- End of Navigation --> 
-  
+<!-- End of Navigation -->
+
   <!-- Content Section -->
   <section>
     <div class="container">
@@ -108,7 +108,7 @@
       <li><a href="buttons.html">Buttons</a></li>
       <!--<li><a href="various.html">Various</a></li> -->
   </ul>
-      
+
 
   <h2>Sidebar</h2>
   <img src="http://placehold.it/280x200" class="frame" alt="image with caption" />
@@ -121,23 +121,23 @@
     <!-- container -->
     <div class="clear"></div>
   </section>
-  <!-- End of Content Section --> 
+  <!-- End of Content Section -->
 </div>
-<!-- End of Wrapper -->  
-
-
+<!-- End of Wrapper -->
 
   <!-- Footer -->
   <footer>
     <div class="container">
-      <div class="grid-12">
+      <div class="grid-4 push-4">
         <p>Centurion Framework was created by <a href="http://www.justinhough.com" title="Justin Hough">Justin Hough</a>. Images supplied by <a href="http://placehold.it/">placehold.it</a></p>
+      </div>
+      <div class="grid-4">
+      	<p>Licensed under <a href="http://www.gnu.org/licenses/gpl.html" rel="license">GPL</a> and <a href="http://www.opensource.org/licenses/mit-license.php" rel="license">MIT</a>.</p>
       </div>
     </div>
   </footer>
-  <!-- End of Footer --> 
- 
+  <!-- End of Footer -->
+
 
 </body>
 </html>
-
