updated footer licensing

--- a/documentation.html
+++ b/documentation.html
@@ -4,7 +4,7 @@
 	<title>Docs | Centurion - A CSS Web Framework</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	
+
 	<link rel="shortcut icon" href="graphics/favicon.jpg" />
 	<link rel="apple-touch-icon" href="graphics/apple-touch-icon.png" />
 	<link rel="apple-touch-icon" sizes="72x72" href="graphics/apple-touch-icon-72x72.png" />
@@ -23,7 +23,7 @@
 </head>
 <body>
 	<a href="https://github.com/jhough10/centurion"><img
-        src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" 
+        src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"
         alt="Fork me on GitHub" class="github"></a>
 
 	<header>
@@ -39,11 +39,11 @@
 						<li><a href="documentation.html">Docs</a></li>
 					</ul>
 				</nav>
-				
+
 			</article>
 		</section>
 	</header>
-	
+
 	<section id="headline">
 		<div class="container">
 			<article class="grid-12">
@@ -72,12 +72,15 @@
 			</aside>
 		</div>
 	</section>
-	
+
 
 	<footer>
 		<section class="container">
-			<article class="grid-12">
+			<article class="grid-4 push-4">
 				<p>Site content &copy; 2012 Room 316 Studios.</p>
+			</article>
+			<article class="grid-4">
+				<p>Licensed under <a href="http://www.gnu.org/licenses/gpl.html" rel="license">GPL</a> and <a href="http://www.opensource.org/licenses/mit-license.php" rel="license">MIT</a>.</p>
 			</article>
 		</section>
 	</footer>
