--- a/example/grid.html
+++ b/example/grid.html
@@ -2,24 +2,23 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Fluid Centurion - Grid</title>
-<meta name="description" content="">
+<title>Centurion Framework</title>
+<meta name="description" content="testing">
 <meta name="author" content="">
 
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<link rel="shortcut icon" href="/images/favicon.jpg" />
-<link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png" />
+<link rel="shortcut icon" href="images/favicon.jpg" />
+<link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
+<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
+<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
 
-<link rel="stylesheet" href="/css/reset.css" />
+<link rel="stylesheet" href="../css/reset.css" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-
 <!-- Centurion Framework -->
-<link rel="stylesheet" href="/css/centurion.css" />
+<link rel="stylesheet" href="../css/centurion.css" />
 <!-- End of Framework -->
-<link rel="stylesheet" href="/css/custom.css" />
+<link rel="stylesheet" href="../css/custom.css" />
 
 <!--[if gte IE 9]>
   <style type="text/css">
@@ -28,45 +27,74 @@
     }
   </style>
 <![endif]--><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript" src="/js/jquery.url.js"></script>
-<script type="text/javascript" src="/js/centurion.js"></script>
+<script type="text/javascript" src="js/jquery.url.js"></script>
+<script type="text/javascript" src="js/centurion.js"></script>
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+
 <style type="text/css">
+		code {
+			background:#ccc;
+			border:1px solid #888;
+			display:block;
+			padding: 10px 20px;
+		}
 
+		#grid .grid-1 p,
+		#grid .grid-2 p,
+		#grid .grid-3 p,
+		#grid .grid-4 p,
+		#grid .grid-5 p,
+		#grid .grid-6 p,
+		#grid .grid-7 p,
+		#grid .grid-8 p,
+		#grid .grid-9 p,
+		#grid .grid-10 p,
+		#grid .grid-11 p,
+		#grid .grid-12 p {
+			background:#ededed;
+			border:1px solid #888;
+			color: #333;
+			font-size: 12px;
+			padding: 10px;
+			margin-bottom: 10px;
+		}
 
-  </style>
+		#grid p.noStyle {
+			border: none;
+			background: none;
+			color: #333;
+			font-size: 16px;
+			padding: 0;
+		}
+	</style>
 
 </head>
 <body>
  <!-- Navigation -->
 <header>
 
-    <div class="container">
-      <div class="grid-12">
-          <h1>Centurion Framework</h1>
-          <nav id="main" class="mobile">
-  <span class="openMenu hide-desktop">Open</span>
-  <ul>
-    <li><a href="/index.html">Home</a></li>
-    <li><a href="/about/">About</a></li>
-    <li><a href="/grid/">Grid</a></li>
-    <li><a href="/various/">Features</a></li>
-    <!-- <li><a href="/fluid/">Try Me Fluid!</a></li> -->
-  </ul>
-</nav>
-
-
-      </div>
-    </div>
+	<div class="container">
+		<div class="grid-12">
+				<h1>Centurion Framework</h1>
+				<nav id="main" class="mobile">
+				<span class="openMenu hide-desktop">Open</span>
+				<ul>
+					<li><a href="/example/index.html">Home</a></li>
+					<li><a href="/example/about.html">About</a></li>
+					<li><a href="/example/grid.html">Grid</a></li>
+					<li><a href="/example/documentation.html">Docs</a></li>
+				</ul>
+			</nav>
+		</div>
+	</div>
 
 </header>
 <!-- End of Navigation -->
 
   <!-- Content Section -->
-  <section class="layoutGrid">
+  <section id="grid">
     <div class="container">
         <div class="grid-12">
     <h1>The Grid</h1>
