added feature scss files

--- a/example/documentation.html
+++ b/example/documentation.html
@@ -84,7 +84,7 @@
   </ul>
 
   <h3>Panels</h3>
-  <div class="cPanel">
+  <div class="panels">
     <h3>My panel is bigger than yours.</h3>
     <p>Seriously, just look at this sweet panel.</p>
   </div>
