--- a/example/tables.html
+++ b/example/tables.html
@@ -27,8 +27,8 @@
     }
   </style>
 <![endif]--><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript" src="js/jquery.url.js"></script>
-<script type="text/javascript" src="js/centurion.js"></script>
+<script type="text/javascript" src="../js/jquery.url.js"></script>
+<script type="text/javascript" src="../js/centurion.js"></script>
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
@@ -44,10 +44,10 @@
 				<nav id="main" class="mobile">
 				<span class="openMenu hide-desktop">Open</span>
 				<ul>
-					<li><a href="/example/index.html">Home</a></li>
-					<li><a href="/example/about.html">About</a></li>
-					<li><a href="/example/grid.html">Grid</a></li>
-					<li><a href="/example/documentation.html">Docs</a></li>
+					<li><a href="../example/index.html">Home</a></li>
+					<li><a href="../example/about.html">About</a></li>
+					<li><a href="../example/grid.html">Grid</a></li>
+					<li><a href="../example/documentation.html">Docs</a></li>
 				</ul>
 			</nav>
 		</div>
