--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-<link rel="shortcut icon" href="/images/favicon.jpg" />
-<link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png" />
+<link rel="shortcut icon" href="images/favicon.jpg" />
+<link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
+<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
+<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
 
-<link rel="stylesheet" href="/css/reset.css" />
+<link rel="stylesheet" href="css/reset.css" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
 <!-- Centurion Framework -->
-<link rel="stylesheet" href="/css/centurion.css" />
+<link rel="stylesheet" href="css/centurion.css" />
 <!-- End of Framework -->
-<link rel="stylesheet" href="/css/custom.css" />
+<link rel="stylesheet" href="css/custom.css" />
 
 <!--[if gte IE 9]>
   <style type="text/css">
@@ -28,8 +28,8 @@
     }
   </style>
 <![endif]--><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript" src="/js/jquery.url.js"></script>
-<script type="text/javascript" src="/js/centurion.js"></script>
+<script type="text/javascript" src="js/jquery.url.js"></script>
+<script type="text/javascript" src="js/centurion.js"></script>
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
